--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -28,3 +28,48 @@
 	width: auto;
 	padding: 10px;
 }
+
+/*  */
+/*  */
+
+#Logo-modal {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#Logo-modal-background {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background: rgba(35, 31, 32, 255);
+}
+
+#Logo-modal-content {
+	position: absolute;
+	background-color: rgba(35, 31, 32, 255);
+	size: Large;
+	border: 1px solid rgba(35, 31, 32, 255);
+	border-radius: 5px;
+	height: auto;
+	width: auto;
+	padding: 10px;
+	animation: fade-in 2.7s linear;
+}
+
+@keyframes fade-in {
+	0%,
+	100% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+}
