--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,5 +1,8 @@
 .navBar {
-	background-color: black;
+	background-color: rgba(35, 31, 32, 255);
+	border-radius: 2px;
+	border-bottom: 5px solid rgb(0, 0, 0);
+	justify-content: space-between;
 }
 /*
 .navbar-nav {
