--- a/react-app/src/components/AttendeesList/AttendeesList.css
+++ b/react-app/src/components/AttendeesList/AttendeesList.css
@@ -9,7 +9,7 @@
 	justify-content: space-between;
 	align-items: center;
 	width: auto;
-	border-radius: 20px;
+	/* border-radius: 20px; */
 }
 
 .list-group {
