--- a/react-app/src/components/AttendeesList/AttendeesList.css
+++ b/react-app/src/components/AttendeesList/AttendeesList.css
@@ -33,6 +33,8 @@
 	justify-content: center;
 	/* align-items: center; */
 	display: grid;
+	height: 75vh;
+	width: 350px;
 }
 
 .attendees-list-header {
@@ -42,5 +44,7 @@
 	overflow-x: auto;
 	overflow-y: auto;
 	width: 350px;
-	height: 50px;
+	height: 40px;
+	margin-top: 5px;
+	margin-bottom: 0;
 }
