--- a/react-app/src/components/CurrentAttendeeDetail/CurrentAttendeeDetail.css
+++ b/react-app/src/components/CurrentAttendeeDetail/CurrentAttendeeDetail.css
@@ -1,7 +1,14 @@
 .attendee-text-center {
 	width: 270px;
+	height: auto;
 }
 
 .attendee-card-text {
 	overflow-y: auto;
+	max-height: 60px;
+}
+
+.attendee-card-header {
+	padding-top: 0;
+	margin-top: -18px;
 }
