--- a/react-app/src/components/AttendeeDetail/AttendeeDetail.css
+++ b/react-app/src/components/AttendeeDetail/AttendeeDetail.css
@@ -1,11 +1,13 @@
 .attendee-text-center {
 	width: 270px;
 	height: auto;
+	margin: 0;
 }
 
 .attendee-card-text {
 	overflow-y: auto;
 	max-height: 60px;
+	margin: 0;
 }
 
 .attendee-card-header {
