--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -16,7 +16,7 @@ body {
 	border: 5px rgba(236, 241, 249, 255) solid;
 	background-image: url("./images/swoosh1-cropped.png");
 	height: 70px;
-	width: 250px;
+	width: auto;
 	background-position: -10rem;
 	word-wrap: normal;
 	font-size: x-large;
