--- a/react-app/src/components/AttendeesList/AttendeesList.css
+++ b/react-app/src/components/AttendeesList/AttendeesList.css
@@ -1,53 +1,3 @@
-/* .list-group-item {
-	position: relative;
-	display: inline-flex;
-	padding: 0.75rem 1.25rem;
-	margin: 0.1rem 1.25rem;
-
-	background-color: rgb(110 139 177 / 53%);
-	border: 1px solid rgba(0, 0, 0, 0.125);
-	justify-content: space-between;
-	align-items: center;
-	width: auto;
-
-}
-
-.list-group {
-	width: 350px;
-	overflow-y: auto;
-	height: 75vh;
-}
-
-.list-group-item-name {
-	overflow-x: auto;
-	margin-left: 0.2rem;
-	margin-right: 0.2rem;
-}
-
-.badge {
-	margin-left: 0.2rem;
-	margin-right: 0.2rem;
-}
-
-.attendees-list-container {
-	justify-content: center;
-	display: grid;
-	height: 75vh;
-	width: 350px;
-}
-
-.attendees-list-header {
-	align-items: center;
-	display: flex;
-	justify-content: space-around;
-	overflow-x: auto;
-	overflow-y: auto;
-	width: 350px;
-	height: 40px;
-	margin-top: 5px;
-	margin-bottom: 0;
-} */
-
 .accordion-card {
 	width: 33vw;
 	overflow-y: auto;
@@ -84,14 +34,14 @@
 	justify-content: center;
 	display: grid;
 	max-height: 75vh;
-	/* min-width: 350px; */
+	min-width: 350px;
 	width: 33vw;
-	overflow-y: auto;
 	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .accordion {
-	height: 45vh;
+	height: auto;
 	width: 33vw;
 	overflow-y: auto;
 }
