--- a/react-app/src/components/EventPage/EventPage.css
+++ b/react-app/src/components/EventPage/EventPage.css
@@ -1,8 +1,8 @@
 .Event-Page-Container {
 	max-height: 98vh;
 	display: grid;
-	grid-template-columns: 50vw 18w 27vw;
-	grid-template-rows: 300px 20vh 50vh;
+	grid-template-columns: 40vw 18vw 30vw;
+	grid-template-rows: 300px 20vh 45vh;
 	grid-template-areas:
 		"event-detail attendee-detail attendees-list"
 		"event-detail create-attendee-button attendees-list"
