--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -3,6 +3,8 @@
 	border-radius: 2px;
 	border-bottom: 5px solid rgb(0, 0, 0);
 	justify-content: space-between;
+	max-width: 100vw;
+	width: auto;
 }
 /*
 .navbar-nav {
