--- a/react-app/src/components/EventPage/EventPage.css
+++ b/react-app/src/components/EventPage/EventPage.css
@@ -1,12 +1,14 @@
 .Event-Page-Container {
 	max-height: 98vh;
 	display: grid;
-	grid-template-columns: 32rvw 12rvw 40rvw;
-	grid-template-rows: 300px 20rvh 45rvh;
+	grid-template-columns: 50vw 300px 30vw;
+	grid-template-rows: 300px 20vh 45vh;
 	grid-template-areas:
 		"event-detail attendee-detail attendees-list"
 		"event-detail create-attendee-button attendees-list"
 		"menu-plan-and-items menu-plan-and-items menu-plan-and-items";
+	/* align-items: flex-start; */
+	/* justify-content: center; */
 }
 
 .event-text-center {
@@ -24,6 +26,7 @@
 .event-text-center {
 	grid-area: event-detail;
 	margin: 10px;
+	/* min-height: 700px; */
 }
 
 .attendee-text-center {
