centered page not found and tested attendeeURL string interpolation

--- a/react-app/src/components/PageNotFound/PageNotFound.css
+++ b/react-app/src/components/PageNotFound/PageNotFound.css
@@ -2,7 +2,9 @@
 	width: auto;
 	height: auto;
 	position: absolute;
-	bottom: 50vh;
+	top: 25vh;
+	bottom: 25vh;
 	left: 30vw;
+	right: 30vw;
 	margin: auto;
 }
