--- a/react-app/src/components/EventQuickLook/EventQuickLook.css
+++ b/react-app/src/components/EventQuickLook/EventQuickLook.css
@@ -1,17 +1,27 @@
-.event-text-center {
+.event-text-center__quicklook {
 	width: 50vw;
 	max-width: 1500px;
 	height: auto;
 	margin: 0;
 }
 
-.event-card-text {
+.event-card-text__quicklook {
 	overflow-y: auto;
 	max-height: 60px;
+	height: 60px;
 	margin: 0;
 }
 
-.event-card-header {
+.event-card-header__quicklook {
 	padding-top: 0;
 	margin-top: 0;
+}
+
+.event-card-body__quicklook {
+	height: max-content;
+}
+
+.event-card-header__quicklook {
+	height: 4rem;
+	font-size: 120%;
 }
