--- a/react-app/src/components/EventQuickLook/EventQuickLook.css
+++ b/react-app/src/components/EventQuickLook/EventQuickLook.css
@@ -7,8 +7,8 @@
 
 .event-card-text__quicklook {
 	overflow-y: auto;
-	max-height: 60px;
-	height: 60px;
+	height: 100px;
+	max-height: 120px;
 	margin: 0;
 }
 
@@ -22,12 +22,13 @@
 }
 
 .event-card-header__quicklook {
-	height: 4rem;
+	height: auto;
 	font-size: 120%;
 }
 
-.card {
+.home-card {
 	margin: 10px;
 	border-radius: 20px;
 	height: auto;
+	box-shadow: -1px -1px 11px 0px #0a245a;
 }
