added more styling

--- a/react-app/src/components/EventQuickLook/EventQuickLook.css
+++ b/react-app/src/components/EventQuickLook/EventQuickLook.css
@@ -32,3 +32,8 @@
 	height: auto;
 	box-shadow: -1px -1px 11px 0px #0a245a;
 }
+
+.quicklook-separator + .btn-dark {
+	width: 20vw;
+	max-width: 325px;
+}
