--- a/react-app/src/components/EventPage/EventPage.css
+++ b/react-app/src/components/EventPage/EventPage.css
@@ -47,3 +47,8 @@
 .accordion .card {
 	margin: 0px;
 }
+
+:is(.Event-Page-Container) button {
+	margin: 5px;
+	box-shadow: -1px -1px 5px 0px #0a245a;
+}
