--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -6,7 +6,29 @@
 	max-width: 100vw;
 	width: auto;
 }
-/*
-.navbar-nav {
-	align-items: space-between;
-} */
+.profile-dropdown {
+	height: auto;
+	width: auto;
+	background-color: #7e99bd;
+	box-shadow: 0px 0px 5px 1px #0a245a;
+	list-style: none;
+}
+
+.profile-dropdown > li {
+	margin: 0;
+	padding: 0;
+	margin-left: -2vw;
+	margin-right: 10px;
+	padding: 5px;
+	text-align: center;
+}
+
+.profile-dropdown > li > button {
+	border: none;
+	background-color: transparent;
+}
+
+.profile-dropdown > li:hover {
+	background-color: #4b5c8375;
+	cursor: default;
+}
