--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -2,16 +2,20 @@
 	background-color: rgba(35, 31, 32, 255);
 	border-radius: 2px;
 	border-bottom: 5px solid rgb(0, 0, 0);
+	display: flex;
 	justify-content: space-between;
 	max-width: 100vw;
 	width: auto;
 }
 .profile-dropdown {
-	height: auto;
+	height: 70px;
 	width: auto;
 	background-color: #7e99bd;
 	box-shadow: 0px 0px 5px 1px #0a245a;
 	list-style: none;
+	margin-bottom: 0px;
+	overflow-y: hidden;
+	border-radius: 10px;
 }
 
 .profile-dropdown > li {
@@ -19,7 +23,7 @@
 	padding: 0;
 	margin-left: -2vw;
 	margin-right: 10px;
-	padding: 5px;
+	padding: 2px;
 	text-align: center;
 }
 
@@ -31,4 +35,12 @@
 .profile-dropdown > li:hover {
 	background-color: #4b5c8375;
 	cursor: default;
+}
+
+.navbar-expand .navbar-nav {
+	width: 100%;
+}
+
+#home__Logo {
+	height: 52px;
 }
