--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -20,8 +20,7 @@
 
 .profile-dropdown > li {
 	margin: 0;
-	padding: 0;
-	margin-left: -2vw;
+	margin-left: -30px;
 	margin-right: 10px;
 	padding: 2px;
 	text-align: center;
